@@ -1,7 +1,7 @@
 
 #pragma once
 
-#include <plugin/Plugin.h>
+#include <zeek/plugin/Plugin.h>
 
 namespace plugin {
 namespace Demo_Hooks {
